--- a/ipadapter_aml.ipynb
+++ b/ipadapter_aml.ipynb
@@ -77,7 +77,7 @@
     "    \n",
     "    print(f\"Downloading model {model_id} to {destination_path if destination_path else 'current directory'}\")\n",
     "    ml_client_registry.models.download(name=\"stabilityai-stable-diffusion-xl-base-1-0\", version=5, download_path=destination_path)\n",
-    "    local_model_path = f\"{destination_path}/{model_id}/mlflow_model_folder/artifacts/INPUT_model_path\"\n",
+    "    local_model_path = f\"{destination_path if destination_path else '.'}/{model_id}/mlflow_model_folder/artifacts/INPUT_model_path\"\n",
     "    \n",
     "    return local_model_path\n",
     "\n"
